* New: Option to hide/display Boss percentages on the monitor (text form).
* New: Option to hide/display Boss raid marks on the monitor (represented via internal Rift raid marks).

Res Master
* Change: Name changed to Res Master.
* Change: Enabling [from disabled] Res Master in-game will now update current Raid Res status (rather than requiring a /reloadui)

Ready Check
* New: Remarkable Oilstone (Rogue, Warrior, 60, High)
* New: Kraken Hors D'oeuvres (Cleric, Warrior, 60, Tank, High)
* New: Stuffed Mushrooms (Rogue, 60, Tank, High)
* New: Sharpfin Chops (Mage, Cleric, 60, High)
* New: Prime Flycatcher (Warrior, Rogue, 60, High)
* New: Octopus Broth (Warrior, Rogue, 60, Medium)
* New: Excellent Powersurge Vial (Warrior, Rogue, 60, Medium)
* New: Excellent Brightsurge Vial (Mage, Cleric, 60, Medium)
* New: Excellent Enduring Vial (Rogue, Warrior, Cleric, 60, Medium, Tank)

Raids
Endless Eclipse
* Progenitor Saetos
** New: Added Phase Monitor Percentage tracking for all mini bosses.
* Matriarch of Pestilence
** New: Added Enrage Timer of 7 minutes.
** New: Added Interrupt Alert and Stop Trigger for Way of Decay.
* Dread Lord Goloch
** New: Enabled Tank-Swap for Dread Scythe
Frozen Tempest
* Kolmasveli
** New: Added the new Percentage Monitor to this encounter.
** Fixed: The Energy Vortex should no longer trigger outside of the encounter (Still need UTID for this Unit)
* Artifex Zaviel
** New: Added Phase Monitoring for Power Conducers
** New: Added Timers for each Conducer phase.
** New: Added an Alert for the start of each Conducer phase.
* Crucia
** New: Added Refactored Construct unit for future tracking.
** New: Added an Alert for Tempest Fury (Look away mechanic).
** New: Added Timer for Orbital Strike (Experimental)
** New: Added Timer for Lightning Breath (Experimental)
** New: Added Personal Alert and Stop trigger for Shocking Pulse interrupt.
** New: Added Personal Alert for Lightning Rod.
** New: Enabled Tank-Swap for Conductive Armor.

Hammerknell Fortress